--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 .App {
   text-align: center;
+ 
+} 
+.myFont{
+  font-family: 'Black Han Sans', sans-serif;
+}
+
+.background1{
+   background-image: url(./assets/mbappe.jpg);
+   background-size: cover;
+   width: 100%  ;
+   height: 800px;
+   
 }
 
 .App-logo {
@@ -35,4 +47,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.logo{
+  height : 150px;
+ 
+  
 }
