--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
     monospace;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap');
 
 @media screen and (max-width: 1280px)
 {
