--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,14 @@
 .header{
     background-color: black;
 }
+
+.buttonGroup{
+    display: flex;
+    padding-top: 10px;
+    padding-left: 1260px;
+}
+
+.suscribeButton{
+    margin-right: 15px;
+}
+
