--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,9 +2,9 @@
   font-family: 'Sedgwick Ave Display', cursive;
   text-shadow:#e7f6ff 0 -1px 0,
 black 1px 1px 0,
-blue 2px 2px 0,
-purple 3px 3px 0,
-pink 4px 4px 0,
+white 2px 2px 0,
+brown 3px 3px 0,
+white 4px 4px 0,
 black 5px 5px 0,
 #333 5px 5px 10px;color:rgb(190, 162, 7);
 }
