--- a/src/components/Bann.css
+++ b/src/components/Bann.css
@@ -11,12 +11,14 @@ body {
 	99.99% { margin-left: calc(var(--banner-width) * -1); }
 }
 .banner {
-  margin-top: 30px;
+  margin-top: 10px;
   position: relative;
   width: 100%;
   height: 3.5rem;
   overflow: hidden;
   background-color: rgb(190, 162, 7);
+  box-shadow: 10px 5px 5px 5px white;
+  
 }
 .banner > span {
   position: absolute;
