--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,13 +4,11 @@
 
 .buttonGroup{
     display: flex;
-    padding-top: 10px;
-    padding-left: 15%;
+    justify-content: space-around;
+ padding-top: 10px;
 }
 
-.suscribeButton{
-    margin-right: 15px;
-}
+
 
 
 
