--- a/src/pages/Accueil.css
+++ b/src/pages/Accueil.css
@@ -1,7 +1,7 @@
 .accueil{
     
     background-image: url(../assets/marble.jpg);
-    height: 190em;
+    height: 165em;
     width: 100%;
    background-attachment:fixed;
     background-size: cover;
@@ -16,14 +16,14 @@
 .premiereImage{
     background-image:  url(../assets/cards.jpg);
     background-repeat: no-repeat;
-   background-size: 22em;
- height: 10em;
+   background-size: 100%;
+   width: 85%;
+ height: 170px;
 border-radius: 10px;
  margin-top: 40px;
  box-shadow: 10px 10px 5px  grey;
  transition: transform .4s;
- margin-right: 1em;
- margin-left: 1em;
+ 
 }
 
 .premiereImage:hover{
@@ -32,20 +32,22 @@ border-radius: 10px;
 transform: scale(1.1);
 }
 
-.groupImage1{
-    
+.container1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .textImage1{
- 
-    margin-top: 80px;
+  text-align: center;
+    margin-top: 120px;
    color: black; 
-   font-size: 30px;   
+   font-size: 40px;   
 }
 
 .title{
      font-family: 'Sedgwick Ave Display', cursive;
-     margin-left: 20px;
+    
 }
 
 .explanation{
@@ -54,21 +56,23 @@ transform: scale(1.1);
 }
 
 .container2{
-
- margin-top: 90px; 
- margin-right: 40px; 
+display: flex;
+flex-direction: column;
+align-items: center;
+ 
 }
 
 .deuxiemeImage{
 background-image:  url(../assets/fifaSquad.png);
     background-repeat: no-repeat;
-   background-size: 100%;
- height: 235px;
+   background-size: 20em;
+   width: 85%;
+ height: 16.7em;
 border-radius: 10px;
  margin-top: 40px;
  box-shadow: 10px 10px 5px  grey;
  transition: transform .4s;
- margin-left: 40px;
+ 
 
  
 }
@@ -85,12 +89,13 @@ transform: scale(1.1);
   
     margin-top: 40px;
    color: black; 
-   font-size: 30px;  
+   font-size: 40px;  
 }
 
 .title2{
  font-family: 'Sedgwick Ave Display', cursive;
-  margin-left: 20px;   
+  text-align: center;
+  margin-top:60px
 }
 
 .explanation2{
@@ -100,21 +105,22 @@ transform: scale(1.1);
 }
 
 .container3{
-text-align: center; 
-margin-top: 90px; 
+display: flex;
+flex-direction: column;
+align-items: center;
+
 }
 
 .troisiemeImage{
 background-image:  url(../assets/fifaTotw.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
-  width: 600px;
-  height: 465px;
-  border-radius: 10px;
- margin-top: 80px;
+   background-size: 20em;
+   width: 85%;
+ height: 10.5em;
+border-radius: 10px;
+ margin-top: 40px;
  box-shadow: 10px 10px 5px  grey;
  transition: transform .4s;
- margin-left: 30px;
  
 }
 
@@ -137,7 +143,7 @@ transform: scale(1.1);
      text-align: center;
      font-size: 40px; 
       color: black; 
-    margin-top: 90px;
+    margin-top: 60px;
      
 }
 
@@ -149,3 +155,164 @@ transform: scale(1.1);
 }
 
 
+/* ------------------------------------------------config desktop----------------------------------------------------------------------------- */
+
+@media screen and (min-width: 1224px) {
+.accueil{
+    
+    background-image: url(../assets/marble.jpg);
+    height: 165em;
+    width: 100%;
+   background-attachment:fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+    z-index: 1;
+}
+
+
+.container1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 60px;
+}
+
+
+
+.premiereImage{
+    background-image:  url(../assets/cards.jpg);
+    background-repeat: no-repeat;
+   background-size: 40em;
+   width: 40em;
+ height: 20em;
+border-radius: 10px;
+ margin-top: 40px;
+ box-shadow: 10px 10px 5px  grey;
+ transition: transform .4s;
+ 
+}
+
+.premiereImage:hover{
+-ms-transform: scale(1.1); /* IE 9 */
+-webkit-transform: scale(1.1); /* Safari 3-8 */
+transform: scale(1.1);
+}
+
+
+
+.textImage1{
+  text-align: center;
+    margin-top: 120px;
+   color: black; 
+   font-size: 40px;   
+}
+
+.title{
+     font-family: 'Sedgwick Ave Display', cursive;
+    
+}
+
+.explanation{
+    margin-left: 20px;
+    font-size: 20px;
+}
+
+.container2{
+ display: flex;
+flex-direction: row-reverse;
+justify-content: space-around;
+margin-top: 60px;
+ 
+}
+
+.deuxiemeImage{
+background-image:  url(../assets/fifaSquad.png);
+    background-repeat: no-repeat;
+   background-size: 40em;
+   width: 40em;
+ height: 25em;
+border-radius: 10px;
+ margin-top: 40px;
+ box-shadow: 10px 10px 5px  grey;
+ transition: transform .4s;
+ 
+
+ 
+}
+
+.deuxiemeImage:hover{
+-ms-transform: scale(1.1); /* IE 9 */
+-webkit-transform: scale(1.1); /* Safari 3-8 */
+transform: scale(1.1);
+
+}
+
+
+.textImage2{
+  
+    margin-top: 40px;
+   color: black; 
+   font-size: 40px;  
+}
+
+.title2{
+ font-family: 'Sedgwick Ave Display', cursive;
+  text-align: center;
+  margin-top:60px
+}
+
+.explanation2{
+   
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+.container3{
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+align-items: center;
+margin-top:60px
+}
+
+.troisiemeImage{
+background-image:  url(../assets/fifaTotw.jpg);
+    background-repeat: no-repeat;
+   background-size: 40em;
+   width: 45em;
+ height: 20em;
+border-radius: 10px;
+ margin-top: 60px;
+ box-shadow: 10px 10px 5px  grey;
+ transition: transform .4s;
+ 
+}
+
+.troisiemeImage:hover{
+-ms-transform: scale(1.1); /* IE 9 */
+-webkit-transform: scale(1.1); /* Safari 3-8 */
+transform: scale(1.1);
+
+}
+
+
+
+
+.title3{
+    
+ font-family: 'Sedgwick Ave Display', cursive;
+     text-align: center;
+     font-size: 40px; 
+      color: black; 
+    margin-top: 60px;
+     
+}
+
+.explanation3{
+    text-align: center;
+    margin-left: 20px;
+    font-size: 20px;  
+    color: black; 
+}
+}
