--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,6 +8,11 @@
  padding-top: 10px;
 }
 
+.icone{
+  width: 5px; 
+}
+
+
 
 /* ------------------------------------------------config desktop----------------------------------------------------------------------------- */
 
@@ -22,6 +27,10 @@
 }
 }
 
+.icone{
+    margin-left: 1460px;
+    padding-top: 10px;
+}
 
 
 
