--- a/src/pages/Accueil.css
+++ b/src/pages/Accueil.css
@@ -47,12 +47,13 @@ transform: scale(1.1);
 
 .title{
      font-family: 'Sedgwick Ave Display', cursive;
-    
+     text-decoration: none;
 }
 
 .explanation{
     margin-left: 20px;
     font-size: 20px;
+     text-decoration: none;
 }
 
 .container2{
@@ -101,6 +102,7 @@ transform: scale(1.1);
    
     font-size: 20px;
     margin-left: 20px;
+     text-decoration: none;
 }
 
 .container3{
@@ -150,6 +152,7 @@ transform: scale(1.1);
     margin-left: 20px;
     font-size: 20px;  
     color: black; 
+     text-decoration: none;
 }
 
 .textImage4{
@@ -160,6 +163,21 @@ margin-top: 60px;
       color: black; 
     
      
+}
+.actufifa{
+    text-decoration: none;
+    color: black;
+}
+.actufifa:hover{
+   color: rgb(190, 162, 7) ;
+}
+
+.navlinkk{
+    text-decoration: none;
+    color: black;
+}
+.navlinkk:hover{
+    color:rgb(190, 162, 7)
 }
 
 
@@ -224,6 +242,7 @@ transform: scale(1.1);
 .explanation{
     margin-left: 20px;
     font-size: 20px;
+     text-decoration: none;
 }
 
 .container2{
@@ -274,6 +293,7 @@ transform: scale(1.1);
    
     font-size: 20px;
     margin-left: 20px;
+     text-decoration: none;
 }
 
 .container3{
@@ -322,6 +342,7 @@ transform: scale(1.1);
     margin-left: 20px;
     font-size: 20px;  
     color: black; 
+    text-decoration: none;
 }
 
 .textImage4{
@@ -336,4 +357,9 @@ transform: scale(1.1);
 .actufifa{
     text-decoration: none;
 }
+
+.navlinkk{
+    text-decoration: none;
+}
+
 }
