--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -49,8 +49,8 @@ border-style: double;
 }
 
 .moncompte{
-text-decoration: none !important;
-    color: white !important
+
+    color: white ;
 
 }
 .comptegroupe{
