--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -44,6 +44,21 @@ box-shadow: 0px 4px 5px white ;
   color:white;
 }
 
+.body{
+  font-family: 'Courier New', Courier, monospace;
+  background-color: black;
+}
+
+.toast{
+ margin-top: 100px;
+   width: 400px;
+
+}
+.toastensemble{
+  display: flex;
+  flex-direction: column-reverse;
+   
+}
 
 
 
