--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ code {
 
 @import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 
 @media screen and (max-width: 1280px)
 {
