--- a/src/pages/ActuSelection.css
+++ b/src/pages/ActuSelection.css
@@ -1,8 +1,10 @@
 .actu{
     height: 1000px;
     background-image: url(../assets/mbappe2.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
+    background-repeat:no-repeat;
+       background-size:150em;
+   background-attachment: scroll ;
+      background-position:  top 12% right 40% ;  ;
     color: blanchedalmond;
      padding-top: 30px;
      padding-left: 20px;
@@ -11,3 +13,44 @@
 .contain{
     width: 50%;
 }
+
+.retour{
+    color:rgb(190, 162, 7);
+}
+
+.link{
+    text-decoration: none;
+}
+
+
+
+/* ------------------------------------------------config desktop----------------------------------------------------------------------------- */
+
+@media screen and (min-width: 1224px) {
+ .actu{
+    height: 1000px;
+    background-image: url(../assets/mbappe2.jpg);
+    background-repeat: no-repeat;
+     background-attachment:scroll ;
+    background-position:  top 12% right 36% ;
+    color: blanchedalmond;
+     padding-top: 30px;
+     padding-left: 20px;
+}
+
+.contain{
+    width: 50%;
+}
+
+.retour{
+    color:rgb(190, 162, 7);
+}
+
+.link{
+    text-decoration: none;
+}   
+}
+
+
+
+
