--- a/src/pages/RechercheDeJoueurs.css
+++ b/src/pages/RechercheDeJoueurs.css
@@ -1,15 +1,31 @@
+.stat{
+	  background-image: url(../assets/marble.jpg);
+   background-size: cover;
+   background-attachment:fixed;
+    height: 100%;
+}
+
 .background2{
     background-image: url(../assets/marble.jpg);
    background-size: cover;
    background-attachment:fixed;
-   height:10em;
-   display:flex
+
+   
+}
+
+.menuJoueurs{
+	display:flex;
+	flex-direction: row;
+	   background-image: url(../assets/marble.jpg);
+   background-size: cover;
+   background-attachment:fixed;
 }
 
 .sidebar{
      background-image: url(../assets/marble.jpg);
      background-size: cover;
    background-attachment:fixed;
+ 
  
 }
 
@@ -29,6 +45,9 @@ color:rgb(190, 162, 7);
 
 .fontsidebar{
     font-size: 20px;
+	   background-image: url(../assets/marble.jpg);
+   background-size: cover;
+   background-attachment:fixed;
 }
 
 .joueurs{
@@ -57,7 +76,7 @@ flex-wrap: wrap;
 }
 
 .joueursMobile{
-    padding-top: 50px;
+    padding-top: 25px;
    padding-left: 50px;
 }
 
@@ -67,110 +86,510 @@ label{
 
 
 .dribbleurs{
+	background-color: transparent;
     width: 30px;
     height: 30px;
-  padding-bottom: 15px;  
+  padding-bottom: 15px; 
+  border: none; 
 }
+
 .flèches{
+	background-color: transparent;
      height: 30px;
      width: 30px;
 padding-bottom: 15px;
+  border: none;
 }
-.forcedelanature{
-    width: 30px;
-padding-bottom: 15px;
-}
-.notegenerale{
+.force{
+	background-color: transparent;
+     height: 30px;
      width: 30px;
 padding-bottom: 15px;
+  border: none;
 }
-.rocs{
-padding-bottom: 40px;
+.note{
+	
+background-color: transparent;
+padding-bottom: 0px;
+  border: none;
 }
-
-.carteFut{
-    
-  display: grid;
-  
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(200px, auto);
-  
-    background-image: url(../assets/carteFUT.png);
-    background-size: 250px;
-    height:400px;
-    width: 300px;
-    background-repeat: no-repeat;
-   
-    padding-right: 10px;
-}
-
-.backgroundCarte{
-    
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-       background-image: url(../assets/marble.jpg);
-     background-size: cover;
-   background-attachment:fixed;  
-   padding-left: 330px;
+.roc{
+	background-color: transparent;
+     height: 30px;
+     width: 30px;
+padding-bottom: 15px;
+  border: none;
 }
 
 
-.lastname{
-    
-    grid-column: 2;
-  grid-row: 1;
-  margin-top: 180px;
-width: 100%;
-font-family: 'Barlow', sans-serif;
-font-size: 30px; 
-  
+.joueursMobile{
+	color: black;
+	text-align: center;
+	padding-bottom: 50px;
+
 
 }
 
-.country{
-grid-column: 1;
-  grid-row: 1;
+.joueur{
+padding-left: 60px;	
+  font-family: 'Sedgwick Ave Display', cursive;
 }
-.pass{
- grid-column: 1;
-  grid-row: 1;
- 
+
+.poste{
+padding-left: 28px;	
+  font-family: 'Sedgwick Ave Display', cursive;
 }
-.shots{
-  grid-column: 1;
-  grid-row: 1;
- 
-  
+.pays{
+padding-left: 27px;	
+  font-family: 'Sedgwick Ave Display', cursive;
 }
-.dribbles{
-grid-column: 1;
-  grid-row: 1;
+
+.attributs{
+
+padding-top:30px ;
 }
-.power{
-   grid-column: 1;
-  grid-row: 1;
+
+
+
+
+
+
+.styleListe {
+	list-style-type: none;
+	margin-top: 20px;
+	
+	
+	display:flex;
+	
+	
 }
-.position{
-   grid-column: 1;
-  grid-row: 1;
-  margin-top: 70px;
-margin-left: 45px; 
-font-family: 'Barlow', sans-serif;
-font-size: 30px; 
+
+
+.colomnejoueur{
+
 }
-.rate{
-     grid-column: 1;
-  grid-row: 1;
+
+.link{
+	text-decoration: none;
+	color: black;
+	
+}
+
+.link:hover{
+	cursor: pointer;
+}
+
+.playersproperty{
+/* agir sur les listes */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ------------------------------------------------config desktop----------------------------------------------------------------------------- */
+@media screen and (min-width: 1225px) {
+
+/* ----------------------carte fut---------------------------------------------------------------- */
+.good{
+	display: flex;
+	flex-wrap:wrap;
+	
+
+}
+
+.recherche{
+	background-color: black;
+	color: white;
+display:flex;
+	z-index: 5;
+}
+
+.backrecherche{
+z-index: 1;
+background-color: black;
+	height: 100%;
+	width: 20%;
+	margin-left: 1166px;
+	
+	padding-left: 20px;
+}
+.listerecherche{
+	padding-left:20px;
+	  font-family: 'Sedgwick Ave Display', cursive;
+	  text-decoration: none;
+	  z-index: 5;
+}
+
+.miseenpage{
+display: flex;
+
+}
+
+.affichage{
+	margin-left: 0;
+}
+
+.boutonaffichage{
+	background-color:transparent;
+}
+
+
+.dribbleursclicked{
+ color:rgb(190, 162, 7) ;
+ background-color: transparent;
+ border: none;
+ font-size: 30px;
+}
+.dribbleurs{
+
+}
+
+.filtretitre{
+	font-size: 30px;
+}
+
+.hidden{
+	visibility: hidden;
+	background-color: transparent;
+	   background-image: url(../assets/marble.jpg);
+   background-size: cover;
+   background-attachment:fixed;
+
+}
+
+.normal{
+	visibility: visible;
+	   background-image: url(../assets/marble.jpg);
+   background-size: cover;
+   background-attachment:fixed;
+}
+
+.fond{
+	   background-image: url(../assets/marble.jpg);
+   background-size: cover;
+   background-attachment:fixed;
+}
+
+.boutonresultat{
+
+    background-color: rgb(190, 162, 7) ;
+    color: white;
+   border-radius: 10px;
+   margin-left: 50px;
+
+
+}
+
+.searchbar{
+text-align: end;
 margin-top: 20px;
-margin-left: 40px;
-font-family: 'Barlow', sans-serif;
-font-weight: bold ;
-font-size: 43px;
-}
-.defence{
-grid-column: 1;
-  grid-row: 1;
 }
 
+
+
+.fut-player-card {
+	position: relative;
+	width: 300px;
+	height: 485px;
+	background-image: url(../assets/carteFUT.png);
+	display:flex;
+	background-size: 100% 100%;
+	
+	padding: 3.8rem 0;
+
+	-webkit-transition: 200ms ease-in;
+	-o-transition: 200ms ease-in;
+	transition: 200ms ease-in;	
+}
+
+.fut-player-card:hover {
+-ms-transform: scale(1.1); /* IE 9 */
+-webkit-transform: scale(1.1); /* Safari 3-8 */
+transform: scale(1.1);
+}
+
+.player-card-top {
+	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	color: black;
+	padding: 0 1.5rem;
+}
+
+.player-card-top .player-master-info {
+	position: absolute;
+	line-height: 2.2rem;
+	font-weight: 300;
+	padding: 1.5rem 0;
+	text-transform: uppercase;
+}
+
+.player-card-top .player-master-info .player-rating {
+	font-size: 2rem;
+}
+
+.player-card-top .player-master-info .player-position {
+	font-size: 1.4rem;
+}
+
+.player-card-top .player-master-info .player-nation {
+	display: block;
+	width: 2rem;
+	height: 25px;
+	margin: 0.3rem 0;
+}
+
+.player-card-top .player-master-info .player-nation img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: contain;
+	object-fit: contain;
+}
+
+.player-card-top .player-master-info .player-club {
+	display: block;
+	width: 2.1rem;
+	height: 40px;
+}
+
+.player-card-top .player-master-info .player-club img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: contain;
+	object-fit: contain;
+}
+
+.player-card-top .player-picture {
+	width: 200px;
+	height: 200px;
+	margin: 0 auto;
+	overflow: hidden;
+}
+.player-card-top .player-picture img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: contain;
+	object-fit: contain;
+	position: relative;
+	right: -1.5rem;
+	bottom: 0;
+}
+
+.player-card-top .player-picture .player-extra {
+	position: absolute;
+	right: 0;
+	bottom: -0.5rem;
+	overflow: hidden;
+	font-size: 1rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	width: 100%;
+	height: 2rem;
+	padding: 0 1.5rem;
+	text-align: right;
+	background: none;
+}
+
+.player-card-top .player-picture .player-extra span {
+	margin-left: 0.6rem;
+	text-shadow: 2px 2px #333;
+}
+
+.player-card-bottom {
+	position: relative;
+}
+
+.player-card-bottom .player-info {
+	display: block;
+	padding: 0.3rem 0;
+	color: black;
+	width: 90%;
+	margin: 0 auto;
+	height: auto;
+	position: relative;
+	z-index: 2;
+}
+
+.player-card-bottom .player-info .player-name {
+	width: 100%;
+	display: block;
+	text-align: center;
+	font-size: 1.6rem;
+	text-transform: uppercase;
+	border-bottom: 2px solid rgba(233, 204, 116, 0.1);
+	padding-bottom: 0.3rem;
+	overflow: hidden;
+}
+.player-card-bottom .player-info .player-name span {
+	display: block;
+	text-shadow: 2px 2px #111;
+}
+
+.player-card-bottom .player-info .player-features {
+	margin: 0.5rem auto;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+}
+.player-card-bottom .player-info .player-features .player-features-col {
+	border-right: 2px solid rgba(233, 204, 116, 0.1);
+	padding: 0 2.3rem;
+}
+
+.player-card-bottom .player-info .player-features .player-features-col span {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	font-size: 1.2rem;
+	text-transform: uppercase;
+}
+
+.player-card-bottom .player-info .player-features .player-features-col span .player-feature-value {
+	margin-right: 0.3rem;
+	font-weight: 700;
+}
+
+.player-card-bottom .player-info .player-features .player-features-col span .player-feature-title {
+	font-weight: 300;
+}
+
+.player-card-bottom .player-info .player-features .player-features-col:last-child {
+	border: 0;
+}
+
+.player-position{
+  font-weight: bolder;
+  margin-left: 45px;
+}
+.player-rating{
+  margin-left: 42px;
+}
+
+
+
+.styleListe {
+	list-style-type: none;
+	
+	border-bottom: solid 5px;
+	width: 120%;
+	
+	margin-bottom: 20px;
+	
+}
+
+
+.listPlayers{
+	
+display: flex;
+flex-direction: column;
+
+}
+
+.titre{
+height: 130px;
+width: 100%;
+}
+
+
+
+.colomnejoueur{
+	
+padding-left: 80px;
+
+}
+
+.link{
+	text-decoration: none;
+	color: black;
+	
+}
+
+
+.link:hover{
+	cursor: pointer;
+}
+
+.attributsfiltre{
+	display:flex;
+	margin-left: 0px;
+}
+
+.att {
+margin-left: 70px;
+  font-family: 'Sedgwick Ave Display', cursive;
+  background-color: transparent;
+  border: none;
+}
+
+
+/* ---------------------------------------------------------test pour pagination-------------------------------------- */
+
+.pagination {
+ align-items: center; 
+ margin-left: 37%;
+}
+
+
+.pagination .text {
+	/* Taille chiffre à gauche */
+  opacity: 0.6;
+  font-size: 1.5rem;
+}
+
+
+
+.page {
+	/* Configuration des boutons changement de page */
+  color: black;
+  height: 3rem;
+  width: 3rem;
+ 
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  border: solid 0.2rem rgb(190, 162, 7) ;
+  background-color: transparent;
+  border-radius: 0.7rem;
+  cursor: pointer;
+  
+}
+
+.page.active,
+.page:hover {
+	/* configuration intérieur des boutons changement de page */
+  background-color: black;
+  color:white
+}
+
+.page.disabled {
+  background-color: transparent !important;
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.restantpage{
+	  background-image: url(../assets/marble.jpg);
+  
+    width: 100%;
+   background-attachment:fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+	
+}
+
+
+}
